[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/baumfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/sprites/tooth-top-damaged-3.png" type="Texture" id=2]
[ext_resource path="res://assets/scripts/Options.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/tooth-top.png" type="Texture" id=4]

[node name="Options" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.345098, 0.243137, 0.243137, 1 )

[node name="VContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Options" type="Label" parent="VContainer"]
margin_right = 1024.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 1 )
text = "Options"
align = 1

[node name="Panel" type="Panel" parent="VContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 79.0
margin_right = 1024.0
margin_bottom = 515.0
size_flags_vertical = 3

[node name="HContainer" type="HBoxContainer" parent="VContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GridContainer" type="GridContainer" parent="VContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
columns = 3

[node name="Master" type="Label" parent="VContainer/Panel/GridContainer"]
margin_top = 51.0
margin_right = 180.0
margin_bottom = 126.0
custom_fonts/font = ExtResource( 1 )
text = "Master"
align = 1

[node name="ContainerMasterSlider" type="VBoxContainer" parent="VContainer/Panel/GridContainer"]
margin_left = 184.0
margin_right = 947.0
margin_bottom = 177.0
size_flags_vertical = 3
alignment = 1

[node name="SliderMaster" type="HSlider" parent="VContainer/Panel/GridContainer/ContainerMasterSlider"]
margin_top = 72.0
margin_right = 763.0
margin_bottom = 104.0
focus_neighbour_bottom = NodePath("../../ContainerMusicSlider/SliderMusic")
custom_icons/grabber_highlight = ExtResource( 2 )
custom_icons/grabber = ExtResource( 4 )
max_value = 1.0
step = 0.01

[node name="ValMaster" type="Label" parent="VContainer/Panel/GridContainer"]
margin_left = 951.0
margin_top = 51.0
margin_right = 1024.0
margin_bottom = 126.0
custom_fonts/font = ExtResource( 1 )
text = "0%"
align = 1

[node name="Music" type="Label" parent="VContainer/Panel/GridContainer"]
margin_top = 181.0
margin_right = 180.0
margin_bottom = 256.0
custom_fonts/font = ExtResource( 1 )
text = "Music"
align = 1

[node name="ContainerMusicSlider" type="VBoxContainer" parent="VContainer/Panel/GridContainer"]
margin_left = 184.0
margin_top = 181.0
margin_right = 947.0
margin_bottom = 256.0
size_flags_horizontal = 3
alignment = 1

[node name="SliderMusic" type="HSlider" parent="VContainer/Panel/GridContainer/ContainerMusicSlider"]
margin_top = 21.0
margin_right = 763.0
margin_bottom = 53.0
focus_neighbour_top = NodePath("../../ContainerMasterSlider/SliderMaster")
focus_neighbour_bottom = NodePath("../../ContainerEffectsSlider/SliderEffects")
custom_icons/grabber_highlight = ExtResource( 2 )
custom_icons/grabber = ExtResource( 4 )
max_value = 1.0
step = 0.01

[node name="ValMusic" type="Label" parent="VContainer/Panel/GridContainer"]
margin_left = 951.0
margin_top = 181.0
margin_right = 1024.0
margin_bottom = 256.0
custom_fonts/font = ExtResource( 1 )
text = "0%"
align = 1

[node name="Effects" type="Label" parent="VContainer/Panel/GridContainer"]
margin_top = 310.0
margin_right = 180.0
margin_bottom = 385.0
custom_fonts/font = ExtResource( 1 )
text = "Effects"
align = 1

[node name="ContainerEffectsSlider" type="VBoxContainer" parent="VContainer/Panel/GridContainer"]
margin_left = 184.0
margin_top = 260.0
margin_right = 947.0
margin_bottom = 436.0
size_flags_vertical = 3
alignment = 1

[node name="SliderEffects" type="HSlider" parent="VContainer/Panel/GridContainer/ContainerEffectsSlider"]
pause_mode = 2
margin_top = 72.0
margin_right = 763.0
margin_bottom = 104.0
focus_neighbour_top = NodePath("../../ContainerMusicSlider/SliderMusic")
focus_neighbour_bottom = NodePath("../../../../Back")
custom_icons/grabber_highlight = ExtResource( 2 )
custom_icons/grabber = ExtResource( 4 )
max_value = 1.0
step = 0.01

[node name="ValEffects" type="Label" parent="VContainer/Panel/GridContainer"]
margin_left = 951.0
margin_top = 310.0
margin_right = 1024.0
margin_bottom = 385.0
custom_fonts/font = ExtResource( 1 )
text = "0%"
align = 1

[node name="Back" type="Button" parent="VContainer"]
pause_mode = 2
margin_top = 519.0
margin_right = 1024.0
margin_bottom = 600.0
focus_neighbour_top = NodePath("../Panel/GridContainer/ContainerEffectsSlider/SliderEffects")
custom_fonts/font = ExtResource( 1 )
text = "Back"

[connection signal="value_changed" from="VContainer/Panel/GridContainer/ContainerMasterSlider/SliderMaster" to="." method="_on_SliderMaster_value_changed"]
[connection signal="value_changed" from="VContainer/Panel/GridContainer/ContainerMusicSlider/SliderMusic" to="." method="_on_SliderMusic_value_changed"]
[connection signal="value_changed" from="VContainer/Panel/GridContainer/ContainerEffectsSlider/SliderEffects" to="." method="_on_SliderEffects_value_changed"]
[connection signal="pressed" from="VContainer/Back" to="." method="_on_Back_pressed"]
